Removed template text, added actual paragraphs/links

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             <h2>ABOUT FLORISTS</h2>
             <p>FLORISTS was started in 2016 as a movement to introduce some of the lesser known pieces of Japanese car culture to
               a worldwide audience.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <p>Starting with importing Japanese parts, FLORISTS has since grown into a brand itself, looking for ways to pair
+            worldwide automotive enthusiasts with the unique parts and culture of Japan.</p>
+            <p>Now, we continue pushing and striving to give you the most complete picture of car culture in Japan. From the importing
+            of authentic parts to the creation of our own Japanese-inspired clothes and parts, we love Japanese cars just as much
+            as our customers and can accommodate customers of any knowledge level or need.</p>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>ONLINE STORE</h2>
           <p>You can visit the FLORISTS online store here.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Online Store</a>
+          <a href="https://floristsjp.myshopify.com" class="btn btn-default btn-lg">Visit Online Store</a>
         </div>
       </div>
     </section>
@@ -104,19 +104,19 @@
             <p>If you have any special requests or would like items ordered straight from Japan, you can contact us below.</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                <a href="https://twitter.com/floristsjp" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                <a href="mailto:tim@tepatti.com" class="btn btn-default btn-lg">
                   <i class="fa fa-envelope fa-fw"></i>
                   <span class="network-name">Email</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                <a href="https://www.facebook.com/floristsjp" class="btn btn-default btn-lg">
                   <i class="fa fa-facebook fa-fw"></i>
                   <span class="network-name">Facebook</span>
                 </a>
@@ -127,13 +127,10 @@
       </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
-
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Your Website 2017</p>
+        <p>Copyright &copy; FLORISTS</p>
       </div>
     </footer>
 
