--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>ONLINE STORE</h2>
           <p>You can visit the FLORISTS online store here.</p>
-          <a href="https://floristsjp.myshopify.com" class="btn btn-default btn-lg">Visit Online Store</a>
+          <a href="https://florists.bigcartel.com" class="btn btn-default btn-lg">Visit Online Store</a>
         </div>
       </div>
     </section>
